fix: closed menu is covering content

--- a/assets/scss/menubar.sass
+++ b/assets/scss/menubar.sass
@@ -27,7 +27,7 @@
         height: 50px
         margin-top: (100px - 50px) / 2
 
-        transition: background .3 s ease-in-out
+        transition: background .3s ease-in-out
         cursor: pointer
 
         &.closed
@@ -38,16 +38,16 @@
 
     .menu-overlay, .menu-wrapper
         width: 100%
-        height: 712px
 
     .menu-wrapper
         position: absolute
         left: 0
         top: 100px
-        overflow: hidden
+        height: 0
 
     .menu-overlay
         background-color: #F37626
+        height: 700px
         position: relative
 
         transition: left 0.2s ease
